--- a/om1.html
+++ b/om1.html
@@ -15,7 +15,7 @@
 <body>
 <div class="middle">
     <div class="first">
-    <a href="https://om70om.github.io/king/"> <span class="material-icons">home</span></a>
+    <a href="index.html"> <span class="material-icons">home</span></a>
     </div>
     
   <div class="second">
