--- a/om1.html
+++ b/om1.html
@@ -59,13 +59,13 @@
     <div class="sea">
          <span class="material-icons">search</span>
     </div>
-    <div class="img"><img src="Fbb.jpg" alt="Fbb.jpg">
+    <div class="img"><img src="FBb.jpg" alt="Fbb.jpg">
     </div>
     <div class="name"><h2>Om Singh</h2></div>
     <div class="dec"><p>See your profile</p></div>
     
     <div class="log">
-      <img src="FBb.jpg" alt="FBb.jpg"></div>
+      <img src="Fbb.jpg" alt="FBb.jpg"></div>
 
   </div>
   
